--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-imageio==2.13.3
+ffmpeg-python==0.2.0
+imageio==2.22.0
+imageio-ffmpeg==0.4.7
 matplotlib==2.2.2
 numpy==1.22.0
 pandas==0.23.4
@@ -10,5 +12,4 @@ scikit-learn==0.19.2
 scipy==1.1.0
 torch==1.0.0
 torchvision==0.2.1
-tqdm==4.24.0
-moviepy==1.0.3
+tqdm==4.64.1
